--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="normal"
-            android:textColor="@android:color/"rad"
+            android:textColor="@android:color/rad"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
-            android:textSize="40sp"
+            android:textSize="50sp"
             android:text="@string/tasks" />
 
         <androidx.recyclerview.widget.RecyclerView
