--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
             android:id="@+id/tasksText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="normal"
+            android:textStyle="light"
             android:textColor="@android:color/rad"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
